# mimir

./: pyproject.toml
docs/: design.md  release-v0.1-checklist.md
mimir/: config.py  discord_bot.py  worker.py
mimir/tools/: __init__.py
